<resources>
    <string name="app_name">ABSTRACTS</string>
    <string name="app_subtitle">The Game of Absurd Logic</string>
    <string name="play">Play</string>
    <string name="rules">Rules</string>
    <string name="definitions">Definitions &amp;\nScore Keeping</string>
    <string name="note_beta_version">NOTE: You will automatically play with the Basic Free List of PPTs because this is a beta version that will undergo updates in the near future. Please give feedback at abstractsgame@gmail.com.</string>
    <string name="main_menu">Main Menu</string>
    <string name="get_ready_to_play">Get ready to play…</string>
    <string name="pick_your_ppts">Pick a list of PPTs to play with.</string>
    <string name="you_must_buy">You must buy that list to play with it.</string>
    <string name="not_now">Not Now</string>
    <string name="more_lists_coming_soon">More lists coming soon!</string>
    <string name="get_more_lists">GET MORE LISTS!</string>
    <string name="ppt_basic_free_list"><b>Basic Free List</b></string>
    <string name="ppt_basic_free_list_subtitle">Featuring 205 PPTs COST FREE</string>
    <string name="ppt_expanded_list"><b>Expanded List</b></string>
    <string name="ppt_expanded_list_subtitle">With more than 1,400 PPTs</string>
    <string name="ppt_1988_original_list"><b>1988 Original List</b></string>
    <string name="ppt_1988_original_list_subtitle">From the 1988 board game with 960 PPTs</string>
    <string name="ppt_sports_list">Sports List</string>
    <string name="ppt_kiddie_list">Kiddie List</string>
    <string name="create_teams_title">Name Your Teams</string>
    <string name="too_many_chars">Team names cannot exceed 12 characters.</string>
    <string name="next_team">Next Team</string>
    <string name="submit">Submit</string>
    <string name="for_non_clue_givers">for non-CLUE GIVERS</string>
    <string name="team1">Team 1</string>
    <string name="team2">Team 2</string>
    <string name="team1_got_it">Team 1 Got It!</string>
    <string name="team2_got_it">Team 2 Got It!</string>
    <string name="teams_are_guessing_a">Teams are guessing a…</string>
    <string name="specify_ppt">Please specify Person, Place, or Thing.</string>
    <string name="what_is_a_person">What is a PERSON?</string>
    <string name="what_is_a_place">What is a PLACE?</string>
    <string name="what_is_a_thing">What is a THING?</string>
    <string name="person_def">PEOPLE are specific, real or fictional, single or small groups. EXAMPLES: “THE BEATLES” would be a person, as would “Taylor Swift,” and even “Bugs Bunny.”</string>
    <string name="place_def">PLACES are tangible, historical or sometimes fictional places. They often are cities, countries, monuments or tourist attractions. EXAMPLES: “The White House,” the “Eiffel Tower,” and “Disneyland” would be PLACES and not THINGS.</string>
    <string name="thing_def">THINGS are hardest to wrap your head around because they are a weird catch-all category. They are often products, companies, organizations, titles of books, movies, TV shows, songs, etc. EXAMPLES: “Kentucky Fried Chicken,” “Gone with the Wind,” and “Google.”</string>
    <string name="person">PERSON</string>
    <string name="place">PLACE</string>
    <string name="thing">THING</string>
    <string name="ok">OK</string>
    <string name="cont">Continue</string>
    <string name="get_a_clue">Get New Clue</string>
    <string name="change_ppt">Change PPT</string>
    <string name="clue_with_placeholder">If you were a %1$s,\nwhat would you be?</string>
    <string name="clue_if_you">If you were a</string>
    <string name="clue_what_would_you_be">what would you be?</string>
    <string name="correct">Got It!</string>
    <string name="incorrect">Missed It</string>
    <string name="undo_last">Undo Last Score</string>
    <string name="congrats_with_placeholder">CONGRATS, %1$s</string>
    <string name="new_cg">Winners of this round get to choose the new PERSON, PLACE, or THING (PPT). Welcome new CLUE GIVERS.</string>
    <string name="won_with_placeholder">%1$s WON!!!\nBIG CONGRATS!</string>
    <string name="play_again">Play Again?</string>
    <string name="title_activity_weenie">Weenie</string>
    <string name="weenie_sound">WEENIE Sound</string>
    <string name="stop_weenie_sound">Stop Sound</string>
    <string name="if_rules_violated">Press if Rules\nare violated</string>
    <string name="weenie">WEENIE!</string>
    <string name="weenie_message">You are a WEENIE! Pass device to the other CLUE GIVER. You pushed the limits too far. Next time, don\'t be a WEENIE!</string>
    <string name="first_or_second_with_placeholder">%1$s, do you want to give clues first, or second?</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="see_rules">See Rules</string>
    <string name="hear_rules">Hear Rules</string>
    <string name="rewind">Rewind 15 sec.</string>
    <string name="fast_forward">Fast-forward 15 sec.</string>
    <string name="back_to_picking_list">Back to Your Lists</string>
    <string name="purchasing_title">Shop for Lists</string>
    <string name="buy">BUY</string>
    <string name="price_and_title_with_placeholders">%1$s \t %2$s</string>
    <string name="sku_expanded_list">expanded_list</string>
    <string name="sku_1988_original_list">1988_original_list</string>
    <string name="g_play_unavailable">Sorry. Google Play purchasing is not available on your device at this time.</string>
    <string name="g_play_item_already_owned">That item is already owned.</string>
    <string name="g_play_not_verified">Your purchase could not be verified.</string>
    <string name="g_play_user_canceled">Canceled purchase.</string>
    <string name="g_play_error">Something went wrong. Try again later.</string>
</resources>