<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".CreateTeams">

    <Button
        android:id="@+id/btnCreateTeamsToMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/main_menu"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewNameYourTeams"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnCreateTeamsToMain"
        android:layout_marginTop="0dp"
        android:text="@string/create_teams_title"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/textViewTeamName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewNameYourTeams"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/team1"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="35sp" />

    <EditText
        android:id="@+id/enterTeamName"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="4dp"
        android:layout_alignTop="@+id/btnNext"
        android:layout_toLeftOf="@+id/btnNext"
        android:ems="10"
        android:hint="@string/enter_team_name"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/next_team" />

    <TextView
        android:id="@+id/textViewTooManyCharacters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/enterTeamName"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/too_many_chars"
        android:textColor="@color/warning"
        android:textSize="16sp" />

</RelativeLayout>
