<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".PickPPTListActivity">

    <Button
        android:id="@+id/btnPPTToMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/main_menu"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewGetReady"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:padding="4dp"
        android:text="@string/get_ready_to_play"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewAbstracts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:cropToPadding="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGetReady"
        app:srcCompat="@drawable/title" />

    <TextView
        android:id="@+id/textViewPickYourPPTs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/pick_your_ppts"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewAbstracts" />

    <ScrollView
        android:id="@+id/scrollViewListsYouOwn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPickYourPPTs"
        app:layout_constraintBottom_toTopOf="@+id/textViewMoreListsComingSoon" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:orientation="vertical"
            android:padding="0dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="355dp">

            <TextView
                android:id="@+id/textViewBasicFreeList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:padding="4dp"
                android:text="@string/ppt_basic_free_list"
                android:textAlignment="center"
                android:textColor="@color/darkGray"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewBasicFreeListSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:text="@string/ppt_basic_free_list_subtitle"
                android:textAlignment="center"
                android:textColor="@color/darkGray"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/line_color_primary" />

            <TextView
                android:id="@+id/textViewExpandedList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/ppt_expanded_list"
                android:textAlignment="center"
                android:textColor="@color/darkGray"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textViewExpandedListSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:text="@string/ppt_expanded_list_subtitle"
                android:textAlignment="center"
                android:textColor="@color/darkGray"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/line_color_primary" />

            <TextView
                android:id="@+id/textView1988OriginalList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/ppt_1988_original_list"
                android:textAlignment="center"
                android:textColor="@color/darkGray"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textView1988OriginalListSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:text="@string/ppt_1988_original_list_subtitle"
                android:textAlignment="center"
                android:textColor="@color/darkGray"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

    <TextView
    android:id="@+id/textViewMoreListsComingSoon"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:text="@string/more_lists_coming_soon"
    android:textAlignment="center"
    android:textColor="@android:color/background_light"
    android:textSize="30sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>


