<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.wilsoash005.abstracts.MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:backgroundTint="@color/colorAccent"
        android:onClick="playButtonHandler"
        android:text="@string/play" />

    <Button
        android:id="@+id/rulesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button"
        android:layout_below="@+id/button"
        android:layout_marginTop="38dp"
        android:backgroundTint="@color/colorAccent"
        android:onClick="rulesButtonHandler"
        android:text="@string/rules" />

    <TextView
        android:id="@+id/textViewSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp"
        android:padding="8dp"
        android:text="The Game of Absurd Logic - Connecting People, Places and Things"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnDefinitions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rulesButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:backgroundTint="@color/colorAccent"
        android:onClick="scoreKeeperButtonHandler"
        android:text="@string/definitions" />

    <ImageView
        android:id="@+id/imgViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/title" />

    <ImageView
        android:id="@+id/imageViewLogoLeft"
        android:layout_width="200dp"
        android:layout_height="470dp"
        android:layout_alignTop="@+id/textViewSubtitle"
        android:layout_below="@+id/imgViewTitle"
        android:layout_toStartOf="@+id/btnDefinitions"
        android:src="@drawable/logo_left" />

    <ImageView
        android:id="@+id/imageViewLogoRight"
        android:layout_width="200dp"
        android:layout_height="470dp"
        android:layout_alignTop="@+id/textViewSubtitle"
        android:layout_toEndOf="@+id/btnDefinitions"
        android:src="@drawable/logo_right" />

</RelativeLayout>
